--- a/public/404.html
+++ b/public/404.html
@@ -532,7 +532,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
   <header class="top-header"></header>
 
