--- a/public/500.html
+++ b/public/500.html
@@ -261,7 +261,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/500.html -->
   <div id="error">
     <div id="box"></div>
